{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 295,
  "lineage": "ae6989a4-78d6-a889-4715-0661aa6b16c3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "project_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-084568db4383264d4",
            "arn": "arn:aws:ec2:us-east-1:613307913725:instance/i-0bed0348afaa6bdf6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bed0348afaa6bdf6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "final-pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0751a04436c27b779",
            "private_dns": "ip-10-0-1-179.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.179",
            "public_ip": "54.208.111.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03074ee50da502250",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00af960146878726b",
            "tags": {
              "Name": "final-project-ec2"
            },
            "tags_all": {
              "Name": "final-project-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c4f2c1d29a7e54de"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.final_pem",
            "aws_security_group.project_sg",
            "aws_subnet.project_public_sn",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613307913725:internet-gateway/igw-0e23a339474369984",
            "id": "igw-0e23a339474369984",
            "owner_id": "613307913725",
            "tags": {
              "Name": "final-project-igw"
            },
            "tags_all": {
              "Name": "final-project-igw"
            },
            "vpc_id": "vpc-06191479c2abf9b7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613307913725:route-table/rtb-0972c2dbf36e6f3e4",
            "id": "rtb-0972c2dbf36e6f3e4",
            "owner_id": "613307913725",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "final-project-private-rt"
            },
            "tags_all": {
              "Name": "final-project-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06191479c2abf9b7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613307913725:route-table/rtb-0ade4983707784c8d",
            "id": "rtb-0ade4983707784c8d",
            "owner_id": "613307913725",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e23a339474369984",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "final-project-public-rt"
            },
            "tags_all": {
              "Name": "final-project-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06191479c2abf9b7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.project_igw",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed911389d451b199",
            "route_table_id": "rtb-0972c2dbf36e6f3e4",
            "subnet_id": "subnet-01bfced1f6e71420a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.project_private_rt",
            "aws_subnet.project_private_sn_1",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0171e7363a8c01343",
            "route_table_id": "rtb-0972c2dbf36e6f3e4",
            "subnet_id": "subnet-0c73bd4ee2d91efc0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.project_private_rt",
            "aws_subnet.project_private_sn_2",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f716e789dd0f68a",
            "route_table_id": "rtb-0ade4983707784c8d",
            "subnet_id": "subnet-00af960146878726b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.project_igw",
            "aws_route_table.project_public_rt",
            "aws_subnet.project_public_sn",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "project_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613307913725:security-group/sg-0fe7fabe3b5bd6b0d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0fe7fabe3b5bd6b0d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c4f2c1d29a7e54de"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "project_rds_sg",
            "name_prefix": "",
            "owner_id": "613307913725",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "project-rds-sg"
            },
            "tags_all": {
              "Name": "project-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06191479c2abf9b7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.project_sg",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "project_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613307913725:security-group/sg-0c4f2c1d29a7e54de",
            "description": "Security group for EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4f2c1d29a7e54de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "final-project-sg",
            "name_prefix": "",
            "owner_id": "613307913725",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "final-project-sg"
            },
            "tags_all": {
              "Name": "final-project-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06191479c2abf9b7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_private_sn_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613307913725:subnet/subnet-01bfced1f6e71420a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bfced1f6e71420a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "613307913725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "final-project-private-subnet-1"
            },
            "tags_all": {
              "Name": "final-project-private-subnet-1"
            },
            "vpc_id": "vpc-06191479c2abf9b7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_private_sn_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613307913725:subnet/subnet-0c73bd4ee2d91efc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c73bd4ee2d91efc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "613307913725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "final-project-private-subnet-2"
            },
            "tags_all": {
              "Name": "final-project-private-subnet-2"
            },
            "vpc_id": "vpc-06191479c2abf9b7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_public_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613307913725:subnet/subnet-00af960146878726b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00af960146878726b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "613307913725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "final-project-public-subnet"
            },
            "tags_all": {
              "Name": "final-project-public-subnet"
            },
            "vpc_id": "vpc-06191479c2abf9b7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:613307913725:vpc/vpc-06191479c2abf9b7e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03422624fc0b45c59",
            "default_route_table_id": "rtb-037bd12daa52f56b5",
            "default_security_group_id": "sg-0712cf0c7b4dc1e10",
            "dhcp_options_id": "dopt-06c0a6137f4833e7d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06191479c2abf9b7e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-037bd12daa52f56b5",
            "owner_id": "613307913725",
            "tags": {
              "Name": "final-project-vpc"
            },
            "tags_all": {
              "Name": "final-project-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}